--- a/public/info/index.html
+++ b/public/info/index.html
@@ -53,7 +53,7 @@
                <div class="name">
                   <p class="stars"><i class="icon-star"></i> <i class="icon-star"></i> <i class="icon-star"></i></p>
                   <!-- Replace # with your site link. Replace "Alejandra" with your site name. -->
-                  <p class="namey"><b><a href="index.html">Alejandra</a></b></p>
+                  <p class="namey"><b><a href="index.html">Rails Tutor</a></b></p>
                   <p class="stars"><i class="icon-star"></i> <i class="icon-star"></i> <i class="icon-star"></i></p>
                </div>
             </div>
@@ -80,7 +80,7 @@
       <div class="row">
          <div class="span12">
             <!-- Big title. Add class "color" for pink color. -->
-            <h1>Web Design <span class="color">&</span> Development</h1>
+            <h1>Private Rails Mentor <span class="color">&</span> Trainning</h1>
             <!-- Another title -->
             <h2 class="color">Welcome to the design world</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lorem eros, malesuada vitae faucibus quis, dignissim consectetur mi. Aliquam interdum felis at tortor vulputate commodo. Nullam commodo tortor magna aliquet. </p>
